Fix z-index on map

--- a/slacklinegroups/app/assets/stylesheets/_components/map/MapControlsContainer.scss
+++ b/slacklinegroups/app/assets/stylesheets/_components/map/MapControlsContainer.scss
@@ -6,4 +6,5 @@
   align-items: center;
   top: 25px;
   left: 25px;
+  z-index: 2;
 }
